# resize_photos

./: .gitignore  README.md  pyproject.toml  resize.py
